2005-05-11  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Corrected character list in "<arg_allowedchars>" in the
	  example string option XML file. Improved instructions for
	  "<arg_allowedchars>".

2005-05-03  Tim Waugh  <twaugh@redhat.com>

	* printer/Epson-Stylus_CX5400.xml: Added IEEE 1284 information (RH
	  bug #156661).

2005-04-20  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/6.xml: Fixed constraint for Minolta PagePro 8L, it broke
	  the "Resolution" option in the Gutenprint IJS driver.

2005-04-19  Tim Waugh <twaugh@redhat.com>

	* printer/Minolta-magicolor_2300_DL.xml: Added USB IEEE 1284
	  information (RH bug #154817).

2005-04-18  Tim Waugh <twaugh@redhat.com>

	* printer/Okidata-OL400e.xml: Changed recommended driver to
	  gimp-print based on information in RH bug #152270.

2005-04-13  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Minolta-magicolor_2430_DL.xml,
	  printer/HP-LaserJet_1000.xml, driver/foo2oak.xml,
	  driver/foo2zjs.xml, foo2zjs-Duplex.xml: Updated XML entries
	  against the current "foo2zjs" driver package.

2005-04-12  Tim Waugh <twaugh@redhat.com>

	* driver/Postscript.xml: Fixed renderer command line properly (RH
	  bug #151645).

	* printer/HP-DeskJet_5150.xml: Corrected incomplete IEEE 1284 ID (RH
	  bug #154518).

	* printer/HP-LaserJet_2420.xml: Added IEEE 1284 information (RH
	  bug #151780).

2005-04-04  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DesignJet_500ps.xml,
	  printer/HP-DesignJet_100plus.xml, driver/dnj650c.xml,
	  driver/chp2200.xml, opt/2.xml, opt/dnj650c-Resolution.xml,
	  opt/largeformat-PageSize.xml: Added HP DesignJet 500ps and HP
	  DesignJet 100plus (Thanks to Albert Gonzalez, albert at
	  imego2000 dot dyndns dot org, and Oleksandr Shneyder, oleksandr
	  dot shneyder at treuchtlingen dot de).

	* opt/dnj650c-Resolution.xml: Added "Resolution" option for the
	  "dnj650c" driver.

2005-04-01  Jacqueline Pitter <jacqueline.pitter@hp.com>

	* printer/HP-LaserJet_1022.xml,