@@ -21,7 +21,11 @@
     <proprietary />
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <manufacturer>HP</manufacturer>
+    <model>Deskjet 3840</model>
+    <description>3845</description>
+    <commandset>LDL,DYN</commandset>
+  </autodetect>
   <functionality>B</functionality>
   <driver>hpijs</driver><!--verified--><!--no "contrib_url"-->
   <comments>
