@@ -1,3 +1,8 @@
+2005-05-19  Tim Waugh  <twaugh@redhat.com >
+
+	* printer/HP-DeskJet_3845.xml: Added IEEE 1284 information (RH
+	  bug #157760).
+
 2005-05-11  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* README: Corrected character list in "<arg_allowedchars>" in the
